# deepseek_free_rust_bot_test

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  bot.py  requirements.txt
bot/: __main__.py  api.py  config.py  deepseek_web.py  handlers.py  keyboards.py  solve_pow.js  storage.py
src/: api_client.rs  config.rs  conversation.rs  handler.rs  main.rs  model_state.rs
